# athena

./: .gitignore  CLAUDE.md  README.md
agent/: Dockerfile  calendar_client.py  gmail_client.py  main.py  memory.py  pyproject.toml  reflection.py
cluster/agent/: deployment.yaml  gcal-secret.example.yaml  gmail-secret.example.yaml  ingress.yaml  memory-pvc.yaml  service.yaml
cluster/cloudflared/: deployment.yaml  tunnel-secret.example.yaml
cluster/frontend/: deployment.yaml  ingress.yaml  service.yaml
cluster/ingestion/: deployment.yaml  documents-pvc.yaml  ingress.yaml  service.yaml
cluster/internship/: deployment.yaml  service.yaml
cluster/leetcode/: deployment.yaml  secret.yaml.example
cluster/mcp-server/: deployment.yaml  ingress.yaml  mcp-auth-secret.example.yaml  service.yaml
cluster/monitoring/: 00-namespace.yaml  grafana-dashboards-configmap.yaml  grafana-deployment.yaml  grafana-ingress.yaml  grafana-provisioning.yaml  grafana-pvc.yaml  grafana-secret.example.yaml  grafana-service.yaml  prometheus-config.yaml  prometheus-deployment.yaml  prometheus-pvc.yaml  prometheus-rbac.yaml  prometheus-service.yaml
cluster/ollama/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
cluster/postgres/: deployment.yaml  namespace.yaml  pvc.yaml  secret.yaml.example  service.yaml
cluster/qdrant/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
cluster/searxng/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
cluster/voice/: deployment.yaml  service.yaml
docs/: architecture.md  kubernetes-layout.md
docs/adr/: 001-database-choice.md  002-rust-mcp-server.md  003-conversation-persistence.md  004-summary-based-rag.md  005-mcp-thin-proxy.md  006-mcp-auth-granularity.md  007-agent-memory-vault.md  008-automatic-memory-capture.md  009-temporal-frontmatter.md  010-interlinked-memory.md  011-gmail-readonly-lookup.md  012-external-memory-feeds.md  013-observability-stack.md
docs/claude/: key-lessons.md
docs/phases/: phase-1-cluster.md  phase-10-reliability-health.md  phase-11-summary-rag.md  phase-12-mcp-server.md  phase-14-agent-memory.md  phase-15-auto-memory.md  phase-16-memory-recall.md  phase-17-temporal-memory.md  phase-18-interlinked-memory.md  phase-19-gmail-readonly.md  phase-2-agent.md  phase-21-memory-feeds.md  phase-22-observability.md  phase-23-calendar-write.md  phase-24-voice.md  phase-3-rag.md  phase-5-internship-hunter.md  phase-6-leetcode-frontend.md  phase-7-model-router.md  phase-8-multi-chat.md  phase-9-document-storage.md
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Sidebar.tsx
ingestion/: Dockerfile  main.py  metrics.py  pyproject.toml
internship/: Dockerfile  main.py  pyproject.toml
leetcode/: Dockerfile  main.py  pyproject.toml
mcp-server/: Cargo.toml  Dockerfile  README.md
mcp-server/src/: agent_client.rs  auth.rs  config.rs  main.rs  registry.rs  server.rs
scripts/: calendar_oauth.py  gmail_oauth.py  install-k3s-master.sh  install-k3s-worker.sh  label-nodes.sh  migrate.sql  pull-models.sh  seed_leetcode.sql  seed_memory.py  test_chat.py  test_chat2.py  test_ollama.py  test_scoring.py
voice/: Dockerfile  main.py  pyproject.toml
(+12 files in other folders)
