[project]
name = "athena-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "langgraph>=0.2",
    "langchain-ollama>=0.2",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
