[project]
name = "athena-ingestion"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "llama-index-core>=0.11",
    "llama-index-embeddings-ollama>=0.3",
    "llama-index-vector-stores-qdrant>=0.3",
    "llama-index-readers-file>=0.2",
    "qdrant-client>=1.9",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "psycopg2-binary>=2.9",
    "apscheduler>=3.10,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
