[package]
name = "athena-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Athena Phase 12 MCP server — thin proxy over HTTP/SSE that forwards tool calls to the agent service."

[[bin]]
name = "athena-mcp-server"
path = "src/main.rs"

[dependencies]
# Official Rust SDK for the Model Context Protocol. We pull in the streamable
# HTTP server transport — same wire format Phase 13's Cloudflare Tunnel will
# forward, so no transport rework later. The `server` feature gives us
# ServerHandler; we implement list_tools / call_tool by hand against the
# registry (Step 3) rather than using the per-tool `#[tool]` macros, so adding
# a tool stays a data-only change.
rmcp = { version = "1.7", features = [
    "server",
    "transport-streamable-http-server",
] }

# HTTP server (rmcp builds its streamable transport on top of axum) + healthz route.
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Forwarding tool calls to the agent service.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization for tool definitions, MCP payloads, agent responses.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Idiomatic Rust error handling.
thiserror = "1"
anyhow = "1"

# Structured logs.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
